// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormWatcher should accept a function as watchPath taking current statePath as parameter 1`] = `
Object {
  "calls": Array [
    Array [
      null,
      Object {
        "__debug": false,
        "children": [Function],
        "watchPath": [Function],
      },
      Object {
        "validation": true,
        "watchedStatePath": "test.newPath",
        "watchedValidation": true,
      },
    ],
  ],
  "instances": Array [
    Object {
      "__debug": false,
      "children": [Function],
      "watchPath": [Function],
    },
  ],
}
`;

exports[`FormWatcher should accept a function as watchPath taking current statePath as parameter 2`] = `
Object {
  "calls": Array [
    Array [
      "test",
    ],
  ],
  "instances": Array [
    Object {
      "__debug": false,
      "children": [Function],
      "watchPath": [Function],
    },
  ],
}
`;

exports[`FormWatcher should handle initial change 1`] = `
Object {
  "calls": Array [
    Array [
      null,
      Object {
        "__debug": false,
        "children": [Function],
        "watchPath": "infos",
      },
      Object {
        "validation": true,
        "watchedStatePath": "infos",
        "watchedValidation": true,
      },
    ],
    Array [
      "salut",
      Object {
        "__debug": false,
        "children": [Function],
        "watchPath": "infos",
      },
      Object {
        "validation": undefined,
        "watchedStatePath": "infos",
        "watchedValidation": undefined,
      },
    ],
  ],
  "instances": Array [
    Object {
      "__debug": false,
      "children": [Function],
      "watchPath": "infos",
    },
    Object {
      "__debug": false,
      "children": [Function],
      "watchPath": "infos",
    },
  ],
}
`;

exports[`FormWatcher should not update when statePath is "infos.name" and watchPath "name" 1`] = `
Object {
  "calls": Array [
    Array [
      null,
      Object {
        "__debug": false,
        "children": [Function],
        "watchPath": "name",
      },
      Object {
        "validation": true,
        "watchedStatePath": "name",
        "watchedValidation": true,
      },
    ],
  ],
  "instances": Array [
    Object {
      "__debug": false,
      "children": [Function],
      "watchPath": "name",
    },
  ],
}
`;

exports[`FormWatcher should throw if children isn't a function 1`] = `"children of FormWatcher must be a function of type (stateValue, props) => React$element"`;

exports[`FormWatcher should update when statePath is "infos" and watchPath "infos.name" 1`] = `
Object {
  "calls": Array [
    Array [
      null,
      Object {
        "__debug": false,
        "children": [Function],
        "watchPath": "infos.name",
      },
      Object {
        "validation": true,
        "watchedStatePath": "infos.name",
        "watchedValidation": true,
      },
    ],
    Array [
      "salut",
      Object {
        "__debug": false,
        "children": [Function],
        "watchPath": "infos.name",
      },
      Object {
        "validation": undefined,
        "watchedStatePath": "infos.name",
        "watchedValidation": undefined,
      },
    ],
  ],
  "instances": Array [
    Object {
      "__debug": false,
      "children": [Function],
      "watchPath": "infos.name",
    },
    Object {
      "__debug": false,
      "children": [Function],
      "watchPath": "infos.name",
    },
  ],
}
`;

exports[`FormWatcher should update when statePath is "infos.name" and watchPath "infos" 1`] = `
Object {
  "calls": Array [
    Array [
      null,
      Object {
        "__debug": false,
        "children": [Function],
        "watchPath": "infos",
      },
      Object {
        "validation": true,
        "watchedStatePath": "infos",
        "watchedValidation": true,
      },
    ],
    Array [
      "salut",
      Object {
        "__debug": false,
        "children": [Function],
        "watchPath": "infos",
      },
      Object {
        "validation": undefined,
        "watchedStatePath": "infos",
        "watchedValidation": undefined,
      },
    ],
  ],
  "instances": Array [
    Object {
      "__debug": false,
      "children": [Function],
      "watchPath": "infos",
    },
    Object {
      "__debug": false,
      "children": [Function],
      "watchPath": "infos",
    },
  ],
}
`;
